fix congratulations title

--- a/src/app/congratulations/congratulations.component.html
+++ b/src/app/congratulations/congratulations.component.html
@@ -1,8 +1,8 @@
 <app-root-layout>
   <div class="card-wrapper">
     <app-result-card
-      [title]="'Complete'"
-      [message]="'Better luck next time!'"
+      [title]="'congratulations'"
+      [message]="'you are amazing!'"
       [score]="result.score"
       [time]="result.time"
       (playAgain)="onClick()"
