--- a/src/app/question-screen/question-screen.component.html
+++ b/src/app/question-screen/question-screen.component.html
@@ -5,7 +5,7 @@
         Question {{ curentQuestion + 1 }}/{{ quizzes.length }}
       </p>
       <p class="question-block__content">
-        {{ quizzes.at(curentQuestion)?.question }}
+        {{ quizzes.at(curentQuestion)?.question | decodeHtml }}
       </p>
     </div>
     <div class="option-list">
@@ -14,13 +14,17 @@
         (ngModelChange)="onAnswerChange($event)"
       >
         <mat-card
-          class="option-item"
-          *ngFor="
-            let option of quizzes.at(curentQuestion)?.options;
-            let i = index
-          "
+          class="option-item correct"
+          [ngClass]="{
+            correct: curentAnswer && isCorrectAnswer(answer)
+          }"
+          *ngFor="let answer of quizzes.at(curentQuestion)?.answers"
         >
-          <mat-radio-button [value]="i">{{ option }}</mat-radio-button>
+          <mat-radio-button
+            [value]="answer"
+            [disabled]="answersList.at(curentQuestion) ? true : false"
+            >{{ answer | decodeHtml }}
+          </mat-radio-button>
         </mat-card>
       </mat-radio-group>
       <div class="question-action">
