--- a/src/app/dialog-history-answer/dialog-history-answer.component.html
+++ b/src/app/dialog-history-answer/dialog-history-answer.component.html
@@ -11,7 +11,12 @@
     <div class="search-bar">
       <mat-form-field>
         <mat-label>Tìm kiếm</mat-label>
-        <input matInput placeholder="Nhập từ khóa..." />
+        <input
+          matInput
+          placeholder="Nhập từ khóa..."
+          [(ngModel)]="searchTerm"
+          (ngModelChange)="onSearchChange()"
+        />
         <button matSuffix mat-icon-button aria-label="Clear">
           <mat-icon>close</mat-icon>
         </button>
